
option java_outer_classname="GetEnumeratorCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message GetEnumeratorCommand {
	optional int64 requestId = 1;
}