
option java_outer_classname="GetEnumeratorResponseProtocol";
package Alachisoft.NCache.Common.Protobuf;
message GetEnumeratorResponse {
	repeated string keys = 1;
}